Navbar links no longer behave weirdly on mobile.

--- a/website/homepage/global.css
+++ b/website/homepage/global.css
@@ -82,11 +82,14 @@
 }
 
 .navbarItem {
+	background-color: unset;
+	border: unset;
 	padding: 1vmin;
 	color: var(--darker-white);
 	border-radius: 2vmin;
 	transition: all 0.5s;
 	cursor: pointer;
+	font-size: 2.5vw;
 }
 
 .navbarItem:active {
@@ -135,6 +138,7 @@
 		background-color: var(--light-red);
 		color: var(--text-white);
 		box-shadow: 0.8vw 1.6vw var(--dark-red);
+		font-size: 5vh;
 	}
 
 	@keyframes button-click {
